[package]
name = "stochasta"
version = "0.5.0"
authors = ["Manuel Krebs <me@leun4m.de>"]
edition = "2021"
description = "A simple stochastic analysis library"
documentation = "https://docs.serde.rs/serde/"
readme = "README.md"
repository = "https://github.com/leun4m/stochasta/"
license = "MIT OR Apache-2.0"
keywords = ["stochastic", "probability"]
categories = ["mathematics"]

exclude = [".github"]

[dependencies]
itertools = "0.10"
num-rational = "0.4"

# Optional dependencies

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]
