[package]
name = "stochasta"
version = "0.7.0"
authors = ["Manuel Krebs <me@leun4m.de>"]
edition = "2021"
description = "A simple stochastic analysis library"
readme = "README.md"
repository = "https://github.com/leun4m/stochasta/"
license = "MIT OR Apache-2.0"
keywords = ["stochastic", "probability"]
categories = ["mathematics"]

exclude = [".github"]

[dependencies]
itertools = "0.10"

[dependencies.num-rational]
version = "0.4"
features = ["serde"]

# Optional dependencies

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dev-dependencies]
impls = "1.0"

# [features]
# serde2 = ["serde", "num-rational/serde"]
