[package]
name = "stochasta"
version = "0.8.2"
authors = ["Manuel Krebs <me@leun4m.de>"]
edition = "2021"
description = "A simple stochastic analysis library"
readme = "README.md"
repository = "https://github.com/leun4m/stochasta"
documentation = "https://docs.rs/stochasta"
license = "MIT OR Apache-2.0"
keywords = ["stochastic", "probability"]
categories = ["mathematics"]
include = [
    "Cargo.toml",
    "LICENSE-*",
    "README.md",
    "CHANGELOG.md",
    "/src",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
itertools = "0.11"

[dependencies.num-rational]
version = "0.4"
features = ["serde"]

[dependencies.enumset]
version = "1.1"
features = ["serde"]

# Optional dependencies

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dev-dependencies]
impls = "1.0"

[features]
default = []
playing_cards = []
